--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,8 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-tools:$aiVersion"
+
+        compile 'net.andreinc.mockneat:mockneat:0.1.4'
         
     }
 }
