--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ allprojects {
     repositories {
         mavenLocal()
         mavenCentral()
+        jcenter()
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
@@ -47,6 +48,7 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-tools:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-ai:$aiVersion"
+        compile 'net.andreinc.mockneat:mockneat:0.1.5'
     }
 }
 
@@ -77,7 +79,7 @@ project(":core") {
         compile "com.badlogicgames.box2dlights:box2dlights:$box2DLightsVersion"
         compile "com.badlogicgames.gdx:gdx-tools:$aiVersion"
 
-        compile 'net.andreinc.mockneat:mockneat:0.1.4'
+        compile 'net.andreinc.mockneat:mockneat:0.1.5'
         
     }
 }
